# iagent-mesh-sdk

./: .cursorignore  .cursorrules  .env.example  .gitignore  .mcp.json  BACKEND_COVERAGE_RESULTS.md  ENGINE_W_AND_DATAHUB_RESULTS.md  README.md  STRIX_HALO_OLLAMA_DIAGNOSTICS.md  agents.md  app.py  llms.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-artifact.yml
docs/: architecture_manifesto.md  jupyter_guide.md
iagent_mesh/: __init__.py  client.py  config.py  core.py  models.py  scaffold_core.py  shapes.py
mcp_server/: __init__.py  server.py
scripts/: scaffold.sh
scripts/sandbox/: sandbox-clickhouse.yaml  sandbox-domain-broker.yaml  sandbox-minio.yaml  write_minio_data.py
templates/01_pure_math/: app.py  pyproject.toml  template.yaml
templates/02_instructor_polars/: app.py  pyproject.toml  template.yaml
templates/02_instructor_polars/prompts/: instructions.yaml
templates/03_baml_pandas/: app.py  pyproject.toml  template.yaml
templates/03_baml_pandas/baml_src/: schema.baml
templates/legacy_adapter/: app.py  pyproject.toml
templates/smolagents_subswarm/: app.py  pyproject.toml
tests/: conftest.py  test_app.py  test_client.py  test_core.py  test_mcp_server.py  test_models.py  test_scaffold_core.py  test_templates.py
