[project]
name = "iagent_mesh"
version = "0.1.0"
description = "Universal Contracts and Infrastructure Wrapper for the iagent Mesh"
authors = [
    { name = "Platform Team" }
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "pytest-mock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iagent_mesh"]
